--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
   "dependencies": {
     "env-cmd": "^10.1.0",
     "express": "^4.18.1",
-    "request": "^2.88.2"
+    "needle": "^3.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/needle": "^2.5.3",
     "@types/node": "^18.0.6",
-    "@types/request": "^2.48.8",
     "nodemon": "^2.0.19"
   }
 }
